# qbi2025-ex3-rudraravl

./: 03-Demonstration.ipynb  README.md  hello.py  pyproject.toml  tasks.py  test_exercise3.py
.github/workflows/: classroom.yml
